--- a/static/index.html
+++ b/static/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Static</title>
-    <script src="bower_components/requirejs/require.js" data-main="js/init"></script>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="js/vendor/bootstrap/dist/css/bootstrap.min.css"/>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <script src="js/vendor/requirejs/require.js" data-main="js/init"></script>
+    <script type="text/x-handlebars" data-template="demo">
+        <h1>Main demo goes here</h1>
+    </script>
 </body>
 </html>
