--- a/static/index.html
+++ b/static/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Static</title>
-    <link rel="stylesheet" href="js/vendor/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/bootstrap.css"/>
 </head>
 <body>
-    <script src="js/vendor/requirejs/require.js" data-main="js/init"></script>
     <script type="text/x-handlebars" data-template="demo">
         <h1>Main demo goes here</h1>
     </script>
+    <script src="js/combined.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
